tests/files/type_checker_tests/should_pass/235.cmdr
//Test that functions type check
fn add(): int {
    a = 3 + 4;
    return a;
}
add();
x = add();
