tests/files/type_checker_tests/should_fail/055.cmdr
//Should fail if variable already exists
type x = int;
fn foo(x: int): int {
    return x;
}
